[project]
name = "fastapi-tistory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.133.1",
    "uvicorn[standard]==0.41.0",
    "python-dotenv==1.2.1",
    "pymysql==1.1.2",
    "motor==3.7.1",
    "beanie==2.0.1",
    "sqlalchemy==2.0.47",
    "aiomysql==0.3.2",
    "alembic==1.18.4",
    "httpx==0.28.1"
]