[project]
name = "fastapi-tistory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.133.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic_settings==2.13.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.1",
    "httpx==0.28.1",
    "pymysql==1.1.2",
    "motor==3.7.1",
    "beanie==2.0.1",
    "sqlalchemy==2.0.47",
    "aiomysql==0.3.2",
    "alembic==1.18.4",
    "playwright==1.58.0"
]


# Playwright 브라우저 엔진 추가 설치
# uv run playwright install chromium
# chromium 실행에 필요한 모든 리눅스 패키지 설치
# uv run playwright install-deps